Adjusts airbnb-host notebook to new NLL

--- a/notebooks/airbnb.ipynb
+++ b/notebooks/airbnb.ipynb
@@ -47,8 +47,18 @@
     "\r\n",
     "from sklearn.model_selection import KFold\r\n",
     "\r\n",
-    "from lmmnn.nn import reg_nn_ohe_or_ignore, reg_nn_lmm, reg_nn_embed, reg_nn_menet\r\n",
-    "from lmmnn.simulation import Count"
+    "from lmmnn.layers import NLL\r\n",
+    "from lmmnn.nn import calc_b_hat\r\n",
+    "from lmmnn.menet import menet_fit, menet_predict\r\n",
+    "from lmmnn.simulation import Count\r\n",
+    "\r\n",
+    "from tensorflow.keras import Model\r\n",
+    "from tensorflow.keras.models import Sequential\r\n",
+    "from tensorflow.keras.layers import Dense, Input, Embedding, Reshape, Concatenate\r\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\r\n",
+    "from tensorflow.keras.optimizers import Adam\r\n",
+    "\r\n",
+    "import tensorflow as tf"
    ],
    "outputs": [],
    "metadata": {}
@@ -57,9 +67,34 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
+    "tf.keras.backend.set_floatx('float64')\r\n",
+    "tf.keras.backend.floatx()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'float64'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
     "# Note: data_cleaned_train_comments_X.csv is the result of an ETL process described in Kalehbasti et. al. (2019), see our paper.\r\n",
     "# We followed the script in their Github repo exactly.\r\n",
-    "path = 'C:/Users/gsimchoni/AirBnbPricePrediction/Data/'\r\n",
+    "\r\n",
+    "# Due to a TF bug there seems to be a memory leakage between LMMNN and other methods when run together,\r\n",
+    "# and those other methods suffer in performance. Consider running LMMNNN separately.\r\n",
+    "\r\n",
+    "path = 'AirBnbPricePrediction/Data/'\r\n",
     "X_train = pd.read_csv(path + 'data_cleaned_train_comments_X.csv')\r\n",
     "y_train = pd.read_csv(path + 'data_cleaned_train_y.csv').values\r\n",
     "y_train = y_train.reshape(len(y_train), )\r\n",
@@ -77,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "coeffs = np.load(path + 'selected_coefs.npy')\r\n",
     "col_set = set()\r\n",
@@ -97,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "print(X.shape)\r\n",
     "print(y.shape)"
@@ -116,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "source": [
     "# relevant Adam params taken from original paper\r\n",
     "NUM_ITERATIONS = 1000\r\n",
@@ -140,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "source": [
     "n_cats = max([X_train['host_id'].max(), X_val['host_id'].max(), X_test['host_id'].max()]) + 1"
    ],
@@ -149,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "len(col_set)"
    ],
@@ -162,14 +197,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "source": [
     "col_set"
    ],
@@ -377,41 +412,148 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 10
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "source": [
-    "X.rename(columns={'host_id': 'z0'}, inplace=True)"
+    "X.rename(columns={'host_id': 'z0'}, inplace=True)\r\n",
+    "y = y.astype(np.float64)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "source": [
-    "def reg_nn(X_train, X_test, y_train, y_test, n_cats, batch=30, epochs=100, patience=10, reg_type='ohe', verbose=False):\r\n",
+    "def reg_nn_lmm(X_train, X_test, y_train, y_test, batch_size, epochs, patience, verbose):\r\n",
+    "    X_input = Input(shape=(X_train[col_set].shape[1],))\r\n",
+    "    y_true_input = Input(shape=(1,))\r\n",
+    "    Z_input = Input(shape=(1,), dtype=tf.int64)\r\n",
+    "    hidden1 = Dense(units=20, activation='relu', input_dim=len(X_train[col_set].values[0]))(X_input)\r\n",
+    "    hidden2 = Dense(units=5, activation='relu')(hidden1)\r\n",
+    "    y_pred_output = Dense(1, activation='linear')(hidden2)\r\n",
+    "    nll = NLL(mode, 1.0, [1.0])(y_true_input, y_pred_output, [Z_input])\r\n",
+    "    model = Model(inputs=[X_input, y_true_input, Z_input], outputs=nll)\r\n",
+    "\r\n",
+    "    adam = Adam(learning_rate=LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=None, decay=DECAY_RATE, amsgrad=False)\r\n",
+    "    model.compile(optimizer= adam)\r\n",
+    "\r\n",
+    "    callbacks = [EarlyStopping(monitor='val_loss', patience=epochs if patience is None else patience)]\r\n",
+    "    \r\n",
+    "    X_train.reset_index(inplace=True)\r\n",
+    "    X_train.sort_values(by=['z0'], inplace=True)\r\n",
+    "    y_train = y_train[X_train.index]\r\n",
+    "    \r\n",
+    "    history = model.fit([X_train[col_set], y_train, X_train['z0']], None, batch_size=batch_size, epochs=epochs,\r\n",
+    "                        validation_split=0.1, callbacks=callbacks, verbose=verbose, shuffle=True)\r\n",
+    "\r\n",
+    "    sig2e_est, sig2b_ests, _ = model.layers[-1].get_vars()\r\n",
+    "    y_pred_tr = model.predict([X_train[col_set], y_train, X_train['z0']]).reshape(X_train.shape[0])\r\n",
+    "    b_hat = calc_b_hat(X_train, y_train, y_pred_tr, [n_cats], sig2e_est, sig2b_ests,\r\n",
+    "                  False, model, None, mode, None, est_cors, None)\r\n",
+    "    y_pred = model.predict([X_test[col_set], np.random.normal(size=y_test.shape), X_test['z0']]).reshape(X_test.shape[0]) + b_hat[X_test['z0']]\r\n",
+    "    return y_pred, (sig2e_est, sig2b_ests), len(history.history['loss'])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "def reg_nn_ignore(X_train, X_test, y_train, y_test, batch_size, epochs, patience, verbose):\r\n",
+    "    model = Sequential()\r\n",
+    "    \r\n",
+    "    model.add(Dense(units=20, activation='relu', input_dim=len(X_train[col_set].values[0])))\r\n",
+    "    model.add(Dense(units=5, activation='relu'))\r\n",
+    "    model.add(Dense(units=1, activation='linear'))\r\n",
+    "    adam = Adam(lr=LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=None, decay=DECAY_RATE, amsgrad=False)\r\n",
+    "    model.compile(loss='mse', optimizer=adam)\r\n",
+    "    callbacks = [EarlyStopping(monitor='val_loss', patience=epochs if patience is None else patience)]\r\n",
+    "    history = model.fit(X_train[col_set], y_train, epochs=epochs, verbose=verbose,\r\n",
+    "                        batch_size=batch_size, validation_split = 0.1, callbacks=callbacks)\r\n",
+    "    y_pred = model.predict(X_test[col_set]).reshape(X_test.shape[0])\r\n",
+    "    return y_pred, (None, None), len(history.history['loss'])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "def reg_nn_embed(X_train, X_test, y_train, y_test, batch_size, epochs, patience, verbose):\r\n",
+    "    embed_dim = 100\r\n",
+    "\r\n",
+    "    X_input = Input(shape=(X_train[col_set].shape[1],))\r\n",
+    "    Z_input = Input(shape=(1,))\r\n",
+    "    embed = Embedding(n_cats, embed_dim, input_length = 1)(Z_input)\r\n",
+    "    embed = Reshape(target_shape = (embed_dim,))(embed)\r\n",
+    "    concat = Concatenate()([X_input, embed])\r\n",
+    "    \r\n",
+    "    hidden1 = Dense(units=20, activation='relu', input_dim=len(X_train[col_set].values[0]))(concat)\r\n",
+    "    hidden2 = Dense(units=5, activation='relu')(hidden1)\r\n",
+    "    output = Dense(1, activation='linear')(hidden2)\r\n",
+    "\r\n",
+    "    model = Model(inputs=[X_input, Z_input], outputs=output)\r\n",
+    "    adam = Adam(lr=LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=None, decay=DECAY_RATE, amsgrad=False)\r\n",
+    "    model.compile(loss='mse', optimizer=adam)\r\n",
+    "    \r\n",
+    "    callbacks = [EarlyStopping(monitor='val_loss', patience=epochs if patience is None else patience)]\r\n",
+    "    history = model.fit([X_train[col_set], X_train['z0']], y_train, batch_size=batch_size, epochs=epochs,\r\n",
+    "                        validation_split=0.1, callbacks=callbacks, verbose=verbose)\r\n",
+    "    y_pred = model.predict([X_test[col_set], X_test['z0']]).reshape(X_test.shape[0])\r\n",
+    "    return y_pred, (None, None), len(history.history['loss'])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "def reg_nn_menet(X_train, X_test, y_train, y_test, batch_size, epochs, patience, verbose):\r\n",
+    "    q = n_cats\r\n",
+    "    clusters_train, clusters_test = X_train['z0'].values, X_test['z0'].values\r\n",
+    "    X_train, X_test = X_train[col_set].values, X_test[col_set].values\r\n",
+    "    # y_train, y_test = y_train.values, y_test.values\r\n",
+    "\r\n",
+    "    model = Sequential()\r\n",
+    "    model.add(Dense(units=20, activation='relu', input_dim=X_train.shape[1]))\r\n",
+    "    model.add(Dense(units=5, activation='relu'))\r\n",
+    "    model.add(Dense(units=1, activation='linear'))\r\n",
+    "    adam = Adam(lr=LEARNING_RATE, beta_1=0.9, beta_2=0.999, epsilon=None, decay=DECAY_RATE, amsgrad=False)\r\n",
+    "    model.compile(loss='mse', optimizer=adam)\r\n",
+    "\r\n",
+    "    model, b_hat, sig2e_est, n_epochs, _ = menet_fit(model, X_train, y_train, clusters_train, q, batch_size, epochs, patience, verbose=verbose)\r\n",
+    "    y_pred = menet_predict(model, X_test, clusters_test, q, b_hat)\r\n",
+    "    return y_pred, (sig2e_est, None), n_epochs"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "def reg_nn(X_train, X_test, y_train, y_test, batch=30, epochs=100, patience=10, reg_type='ohe', verbose=False):\r\n",
     "    start = time.time()\r\n",
     "    if reg_type == 'ohe':\r\n",
-    "        y_pred, sigmas, _, n_epochs = reg_nn_ohe_or_ignore(X_train, X_test, y_train, y_test, [n_cats], x_cols,\r\n",
-    "        batch, epochs, patience, n_neurons, dropout, activation, mode, n_sig2bs, est_cors, verbose)\r\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_ohe(X_train, X_test, y_train, y_test, batch, epochs, patience, verbose)\r\n",
     "    elif reg_type == 'lmm':\r\n",
-    "        y_pred, sigmas, _, n_epochs = reg_nn_lmm(X_train, X_test, y_train, y_test, [n_cats], x_cols,\r\n",
-    "        batch, epochs, patience, n_neurons, dropout, activation, mode, n_sig2bs, est_cors, None, verbose)\r\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_lmm(X_train, X_test, y_train, y_test, batch, epochs, patience, verbose)\r\n",
     "    elif reg_type == 'ignore':\r\n",
-    "        y_pred, sigmas, _, n_epochs = reg_nn_ohe_or_ignore(X_train, X_test, y_train, y_test, [n_cats], x_cols,\r\n",
-    "        batch, epochs, patience, n_neurons, dropout, activation, mode, n_sig2bs, est_cors, verbose, ignore_RE=True)\r\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_ignore(X_train, X_test, y_train, y_test, batch, epochs, patience, verbose)\r\n",
     "    elif reg_type == 'embed':\r\n",
-    "        y_pred, sigmas, _, n_epochs = reg_nn_embed(X_train, X_test, y_train, y_test, [n_cats], x_cols,\r\n",
-    "        batch, epochs, patience, n_neurons, dropout, activation, mode, n_sig2bs, est_cors, verbose)\r\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_embed(X_train, X_test, y_train, y_test, batch, epochs, patience, verbose)\r\n",
     "    elif reg_type == 'menet':\r\n",
-    "        y_pred, sigmas, _, n_epochs = reg_nn_menet(X_train, X_test, y_train, y_test, n_cats, x_cols, batch, epochs, patience,\r\n",
-    "            n_neurons, dropout, activation, n_sig2bs, est_cors, verbose)\r\n",
+    "        y_pred, sigmas, n_epochs = reg_nn_menet(X_train, X_test, y_train, y_test, batch, epochs, patience, verbose)\r\n",
     "    else:\r\n",
     "      raise ValueError(reg_type + 'is an unknown reg_type')\r\n",
     "    end = time.time()\r\n",
@@ -423,11 +565,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "source": [
     "res = pd.DataFrame(columns=['experiment', 'exp_type', 'mse', 'sigma_e_est', 'sigma_b0_est', 'n_epoch', 'time'])\r\n",
-    "kf = KFold(n_splits=5, shuffle=True, random_state=40)\r\n",
-    "# kf = KFold(n_splits=5)\r\n",
+    "kf = KFold(n_splits=5)\r\n",
     "counter = Count().gen()\r\n",
     "x_cols = [col for col in X.columns if col != 'z0']"
    ],
@@ -436,21 +577,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "source": [
     "def iterate_reg_types(X_train, X_test, y_train, y_test, counter, verbose):\r\n",
-    "    mse_lmm, sigmas, n_epochs_lmm, time_lmm = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='lmm', verbose=verbose)\r\n",
+    "    mse_lmm, sigmas, n_epochs_lmm, time_lmm = reg_nn(X_train, X_test, y_train, y_test, reg_type='lmm', verbose=verbose)\r\n",
     "    print(' finished lmm, mse: %.2f' % mse_lmm)\r\n",
-    "    mse_ohe, _, n_epochs_ohe, time_ohe = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='ohe', verbose=verbose)\r\n",
-    "    print(' finished ohe, mse: %.2f' % mse_ohe)\r\n",
-    "    mse_ig, _, n_epochs_ig, time_ig = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='ignore', verbose=verbose)\r\n",
+    "    # mse_ohe, _, n_epochs_ohe, time_ohe = reg_nn(X_train, X_test, y_train, y_test, reg_type='ohe', verbose=verbose)\r\n",
+    "    # print(' finished ohe, mse: %.2f' % mse_ohe)\r\n",
+    "    mse_ig, _, n_epochs_ig, time_ig = reg_nn(X_train, X_test, y_train, y_test, reg_type='ignore', verbose=verbose)\r\n",
     "    print(' finished ignore, mse: %.2f' % mse_ig)\r\n",
-    "    mse_em, _, n_epochs_em, time_em = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='embed', verbose=verbose)\r\n",
+    "    mse_em, _, n_epochs_em, time_em = reg_nn(X_train, X_test, y_train, y_test, reg_type='embed', verbose=verbose)\r\n",
     "    print(' finished embed, mse: %.2f' % mse_em)\r\n",
-    "    mse_me, sigmas_me, n_epochs_me, time_me = reg_nn(X_train, X_test, y_train, y_test, n_cats, reg_type='menet', verbose=verbose)\r\n",
+    "    mse_me, sigmas_me, n_epochs_me, time_me = reg_nn(X_train, X_test, y_train, y_test, reg_type='menet', verbose=verbose)\r\n",
     "    print(' finished menet, mse: %.2f' % mse_me)\r\n",
     "    res.loc[next(counter)] = [i, 'lmm', mse_lmm, sigmas[0], sigmas[1][0], n_epochs_lmm, time_lmm]\r\n",
-    "    res.loc[next(counter)] = [i, 'ohe', mse_ohe, np.nan, np.nan, n_epochs_ohe, time_ohe]\r\n",
+    "    # res.loc[next(counter)] = [i, 'ohe', mse_ohe, np.nan, np.nan, n_epochs_ohe, time_ohe]\r\n",
     "    res.loc[next(counter)] = [i, 'ignore', mse_ig, np.nan, np.nan, n_epochs_ig, time_ig]\r\n",
     "    res.loc[next(counter)] = [i, 'embed', mse_em, np.nan, np.nan, n_epochs_em, time_em]\r\n",
     "    res.loc[next(counter)] = [i, 'menet', mse_me, sigmas_me[0], np.nan, n_epochs_me, time_me]"
@@ -460,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "source": [
     "for i, (train_index, test_index) in enumerate(kf.split(X, y)):\r\n",
     "    print('iteration %d' % i)\r\n",
@@ -477,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "source": [
     "res"
    ],
