Not changing TF default float to 64, consider

--- a/notebooks/airbnb.ipynb
+++ b/notebooks/airbnb.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "tf.keras.backend.set_floatx('float64')\r\n",
+    "# tf.keras.backend.set_floatx('float64')\r\n",
     "tf.keras.backend.floatx()"
    ],
    "outputs": [
