Changes relative path in notebooks after refactoring

--- a/notebooks/neurips_single_categorical/ukb_pa.ipynb
+++ b/notebooks/neurips_single_categorical/ukb_pa.ipynb
@@ -473,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../results/res_ukb_pa.csv')"
+    "res.to_csv('../../results/res_ukb_pa.csv')"
    ]
   }
  ],
