--- a/notebooks/spatial/ukb_pa_spatial.ipynb
+++ b/notebooks/spatial/ukb_pa_spatial.ipynb
@@ -613,7 +613,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../results/res_ukb_pa_spatial.csv')"
+    "res.to_csv('../../results/res_ukb_pa_spatial.csv')"
    ]
   }
  ],
