--- a/notebooks/neurips_single_categorical/airbnb.ipynb
+++ b/notebooks/neurips_single_categorical/airbnb.ipynb
@@ -607,7 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../results/res_airbnb.csv')"
+    "res.to_csv('../../results/res_airbnb.csv')"
    ]
   }
  ],
