--- a/notebooks/spatial/airbnb_spatial.ipynb
+++ b/notebooks/spatial/airbnb_spatial.ipynb
@@ -826,7 +826,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../results/res_airbnb_spatial.csv')"
+    "res.to_csv('../../results/res_airbnb_spatial.csv')"
    ]
   }
  ],
