Adds InstEval notebook

--- a/notebooks/categorical/InstEval.ipynb
+++ b/notebooks/categorical/InstEval.ipynb
@@ -144,7 +144,7 @@
     "n_sig2bs = 3\n",
     "n_sig2bs_spatial = 0\n",
     "est_cors = []\n",
-    "n_neurons = []\n",
+    "n_neurons = [10, 3]\n",
     "activation = 'relu'\n",
     "dropout = []\n",
     "spatial_embedded_neurons = []\n",
