Adds spatial notebooks

--- a/notebooks/spatial/airbnb_spatial.ipynb
+++ b/notebooks/spatial/airbnb_spatial.ipynb
@@ -27,7 +27,7 @@
     "from scipy.spatial.distance import pdist, squareform\n",
     "\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "\n",
     "from lmmnn.nn import reg_nn_ohe_or_ignore, reg_nn_embed, reg_nn_lmm, reg_nn_svdkl, reg_nn_cnn\n",
     "from lmmnn.simulation import Count\n",
@@ -41,13 +41,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# US Air Quality data on census tract level from CDC: \n",
-    "# https://data.cdc.gov/Environmental-Health-Toxicology/Daily-Census-Tract-Level-PM2-5-Concentrations-2016/7vu4-ngxx\n",
-    "# US demographic features come from US Census Demographic dataset from Kaggle: https://www.kaggle.com/datasets/muonneutrino/us-census-demographic-data\n",
-    "# Run pm25_etl.R script\n",
-    "pm25 = pd.read_csv('../../pm25_df.csv')\n",
-    "print(pm25.shape)\n",
-    "pm25.head()"
+    "# data_cleaned_train_comments_X.csv and the rest are the result of an ETL process described in Kalehbasti et. al. (2019).\n",
+    "# We followed the script in their Github repo exactly.\n",
+    "path = '../../AirBnbPricePrediction/Data'\n",
+    "X_train = pd.read_csv(path + 'data_cleaned_train_comments_X.csv')\n",
+    "y_train = pd.read_csv(path + 'data_cleaned_train_y.csv').values\n",
+    "y_train = y_train.reshape(len(y_train), )\n",
+    "\n",
+    "X_val = pd.read_csv(path + 'data_cleaned_val_comments_X.csv')\n",
+    "y_val = pd.read_csv(path + 'data_cleaned_val_y.csv').values\n",
+    "y_val = y_val.reshape(len(y_val), )\n",
+    "\n",
+    "X_test = pd.read_csv(path + 'data_cleaned_test_comments_X.csv')\n",
+    "y_test = pd.read_csv(path + 'data_cleaned_test_y.csv').values\n",
+    "y_test = y_test.reshape(len(y_test), )\n",
+    "\n",
+    "coeffs = np.load(path + 'selected_coefs.npy')\n",
+    "col_set = set()\n",
+    "\n",
+    "for i in range(len(coeffs)):\n",
+    "    if coeffs[i]:\n",
+    "        col_set.add(X_train.columns[i])\n",
+    "X_train = X_train[list(col_set | set(['longitude', 'latitude']))]\n",
+    "X_val = X_val[list(col_set | set(['longitude', 'latitude']))]\n",
+    "X_test = X_test[list(col_set | set(['longitude', 'latitude']))]\n",
+    "\n",
+    "X = pd.concat([X_train, X_val, X_test], ignore_index=True)\n",
+    "y = np.concatenate([y_train, y_val, y_test])\n",
+    "\n",
+    "X['id'] = np.arange(X.shape[0]) # longitude was already in col_set and we've added id column to be able to re-sort the data after the join\n",
+    "\n",
+    "print(X.shape) \n",
+    "X.head()"
    ]
   },
   {
@@ -56,8 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pm25['pm25'] = np.log(pm25['pm25'])\n",
-    "pm25['pm25'].plot(kind='hist', bins = 20)\n",
+    "plt.hist(y, bins = 20) # listing price already logged\n",
     "plt.show()"
    ]
   },
@@ -67,7 +91,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pm25.groupby(['lat', 'long']).size()"
+    "X[['latitude', 'longitude']] = X[['latitude', 'longitude']].round(2)\n",
+    "scaler = MinMaxScaler(feature_range=(-10, 10))\n",
+    "X[['latitude', 'longitude']] = scaler.fit_transform(X[['latitude', 'longitude']])\n",
+    "\n",
+    "location_df = X.groupby(['latitude', 'longitude']).size().index.to_frame()\n",
+    "location_df['location'] = np.arange(location_df.shape[0])\n",
+    "location_df.head()"
    ]
   },
   {
@@ -76,8 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(pm25['location_id'].unique()))\n",
-    "print(pm25['location_id'].max())"
+    "X = X.set_index(['latitude', 'longitude']).join(location_df[['location']]).reset_index().sort_values(by=['id']).drop(['id'], axis=1)\n",
+    "X.index = np.arange(X.shape[0])"
    ]
   },
   {
@@ -86,8 +116,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords = pm25.groupby(['location_id','lat', 'long']).size().index.to_frame().values\n",
-    "dist_matrix = squareform(pdist(coords[:,1:])) ** 2\n",
+    "print(len(X['location'].unique()))\n",
+    "print(X['location'].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coords = location_df[['latitude', 'longitude']].values\n",
+    "dist_matrix = squareform(pdist(coords)) ** 2\n",
     "print(dist_matrix.shape)"
    ]
   },
@@ -97,7 +137,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pm25.rename({'lat': 'D1', 'long': 'D2', 'location_id': 'z0'}, axis=1, inplace=True)"
+    "X.rename(columns={'latitude': 'D1', 'longitude': 'D2', 'location': 'z0'}, inplace=True)\n",
+    "\n",
+    "# no colnames starting with z or D id using our functions\n",
+    "X.columns = [col.lower() if col not in ['D1', 'D2'] else col for col in X.columns]\n",
+    "print([col for col in X.columns if col.startswith('D')])\n",
+    "print([col for col in X.columns if col.startswith('z')])"
    ]
   },
   {
@@ -112,7 +157,7 @@
     "epochs = 500\n",
     "patience = 10\n",
     "qs = []\n",
-    "q_spatial = len(pm25['z0'].unique())\n",
+    "q_spatial = len(X['z0'].unique())\n",
     "n_neurons = [10, 3]\n",
     "dropout = []\n",
     "activation = 'relu'\n",
@@ -206,13 +251,15 @@
     "\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "counter = Count().gen()\n",
-    "X, y = pm25.drop(['pm25'], axis=1), pm25['pm25']\n",
+    "\n",
     "x_cols = [col for col in X.columns if col not in ['z0']]\n",
     "x_cols_to_scale = [col for col in x_cols if col not in ['D1', 'D2']]\n",
     "\n",
     "for i, (train_index, test_index) in enumerate(kf.split(X, y)):\n",
     "    print('iteration %d' % i)\n",
     "    X_train, X_test, y_train, y_test = X.loc[train_index].copy(), X.loc[test_index].copy(), y[train_index], y[test_index]\n",
+    "    y_train = pd.Series(y_train, index=X_train.index)\n",
+    "    y_test = pd.Series(y_test, index=X_test.index)\n",
     "    iterate_reg_types(X_train, X_test, y_train, y_test)"
    ]
   },
@@ -231,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../../results/res_pm25.csv')"
+    "res.to_csv('../../results/res_airbnb_spatial.csv')"
    ]
   }
  ],
