--- a/notebooks/spatial/us_asthma.ipynb
+++ b/notebooks/spatial/us_asthma.ipynb
@@ -42,6 +42,7 @@
    "outputs": [],
    "source": [
     "# US Adult Asthma dataset on cencus tract level from CDC: https://www.cdc.gov/nceh/tracking/topics/asthma.htm\n",
+    "# US demographic features come from US Census Demographic dataset from Kaggle: https://www.kaggle.com/datasets/muonneutrino/us-census-demographic-data\n",
     "# Run asthma_etl.R script\n",
     "asthma = pd.read_csv('../../asthma_df.csv')\n",
     "print(asthma.shape)\n",
