--- a/notebooks/spatial/cars_spatial.ipynb
+++ b/notebooks/spatial/cars_spatial.ipynb
@@ -41,13 +41,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# US Air Quality data on census tract level from CDC: \n",
-    "# https://data.cdc.gov/Environmental-Health-Toxicology/Daily-Census-Tract-Level-PM2-5-Concentrations-2016/7vu4-ngxx\n",
-    "# US demographic features come from US Census Demographic dataset from Kaggle: https://www.kaggle.com/datasets/muonneutrino/us-census-demographic-data\n",
-    "# Run pm25_etl.R script\n",
-    "pm25 = pd.read_csv('../../pm25_df.csv')\n",
-    "print(pm25.shape)\n",
-    "pm25.head()"
+    "# Used Cars from Craigslist dataset from Kaggle: https://www.kaggle.com/datasets/austinreese/craigslist-carstrucks-data\n",
+    "# Run cars_etl.R script\n",
+    "cars = pd.read_csv('/content/drive/MyDrive/cars_df5.csv')\n",
+    "cols_to_drop = ['model_id']\n",
+    "cars.drop(cols_to_drop, axis=1, inplace=True)\n",
+    "print(cars.shape)\n",
+    "cars.head()"
    ]
   },
   {
@@ -56,8 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pm25['pm25'] = np.log(pm25['pm25'])\n",
-    "pm25['pm25'].plot(kind='hist', bins = 20)\n",
+    "cars['price'] = np.log(cars['price'])\n",
+    "cars['price'].plot(kind='hist', bins = 20)\n",
     "plt.show()"
    ]
   },
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pm25.groupby(['lat', 'long']).size()"
+    "cars.groupby(['lat', 'long']).size()"
    ]
   },
   {
@@ -76,8 +76,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(pm25['location_id'].unique()))\n",
-    "print(pm25['location_id'].max())"
+    "print(len(cars['location_id'].unique()))\n",
+    "print(cars['location_id'].max())"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coords = pm25.groupby(['location_id','lat', 'long']).size().index.to_frame().values\n",
+    "coords = cars.groupby(['location_id','lat', 'long']).size().index.to_frame().values\n",
     "dist_matrix = squareform(pdist(coords[:,1:])) ** 2\n",
     "print(dist_matrix.shape)"
    ]
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pm25.rename({'lat': 'D1', 'long': 'D2', 'location_id': 'z0'}, axis=1, inplace=True)"
+    "cars.rename({'lat': 'D1', 'long': 'D2', 'location_id': 'z0'}, axis=1, inplace=True)"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "epochs = 500\n",
     "patience = 10\n",
     "qs = []\n",
-    "q_spatial = len(pm25['z0'].unique())\n",
+    "q_spatial = len(cars['z0'].unique())\n",
     "n_neurons = [10, 3]\n",
     "dropout = []\n",
     "activation = 'relu'\n",
@@ -128,7 +128,8 @@
     "log_params = False\n",
     "idx = None\n",
     "shuffle = False\n",
-    "resolution = 100"
+    "resolution = 100\n",
+    "sample_n_train = 30000 # make sure sample_n_train is on the maximum it can get, I got to 30K (default 10K)"
    ]
   },
   {
@@ -148,7 +149,7 @@
     "            X_train, X_test, y_train, y_test, qs, q_spatial, x_cols, batch, epochs, patience,\n",
     "            n_neurons, dropout, activation, mode,\n",
     "            n_sig2bs, n_sig2bs_spatial, est_cors, dist_matrix, spatial_embed_neurons,\n",
-    "            verbose, Z_non_linear, Z_embed_dim_pct, log_params, idx, shuffle)\n",
+    "            verbose, Z_non_linear, Z_embed_dim_pct, log_params, idx, shuffle, sample_n_train)\n",
     "    elif reg_type == 'ignore':\n",
     "        y_pred, sigmas, _, _, n_epochs = reg_nn_ohe_or_ignore(\n",
     "            X_train, X_test, y_train, y_test, qs, x_cols, batch, epochs, patience,\n",
@@ -169,6 +170,7 @@
     "    end = time.time()\n",
     "    K.clear_session()\n",
     "    gc.collect()\n",
+    "    y_pred = np.clip(y_pred, np.log(1000), np.log(300000))\n",
     "    mse = np.mean((y_pred - y_test)**2)\n",
     "    plt.scatter(y_test, y_pred, alpha = 0.5)\n",
     "    plt.show()\n",
@@ -206,7 +208,7 @@
     "\n",
     "kf = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "counter = Count().gen()\n",
-    "X, y = pm25.drop(['pm25'], axis=1), pm25['pm25']\n",
+    "X, y = cars.drop(['price'], axis=1), cars['price']\n",
     "x_cols = [col for col in X.columns if col not in ['z0']]\n",
     "x_cols_to_scale = [col for col in x_cols if col not in ['D1', 'D2']]\n",
     "\n",
@@ -231,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('../../results/res_pm25.csv')"
+    "res.to_csv('../../results/res_cars_spatial.csv')"
    ]
   }
  ],
