Adds links to original datasets in ETL files

--- a/notebooks/categorical/ukb_blood_cancer.ipynb
+++ b/notebooks/categorical/ukb_blood_cancer.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# After downloading the UK Biobank relevant data, run the ukb_blood_cancer.R ETL, here tryiglycerin is the predicted feature\n",
+    "# After downloading the UK Biobank relevant data, run the ukb_blood_cancer.R ETL, here triglycerides is the predicted feature\n",
     "ukb = pd.read_csv('ukb_triglyc_cancer.csv')\n",
     "cols_to_keep = ['blood_triglyc', 'treatment_id', 'operation_id', 'diagnosis_id', 'cancer_id', 'histology_id',\n",
     "  'weight', 'height_standing', 'gender', 'age', 'smoking', 'nap', 'sleepiness', 'dozing', 'tobacco',\n",
