--- a/notebooks/longitudinal/au_import.ipynb
+++ b/notebooks/longitudinal/au_import.ipynb
@@ -41,6 +41,7 @@
    "outputs": [],
    "source": [
     "# AU anual commodities import data from Kaggle (by UN): https://www.kaggle.com/datasets/unitednations/global-commodity-trade-statistics\n",
+    "# Other yearly metrics come from ourworldindata.org\n",
     "# Run au_import_etl.R script\n",
     "au_import = pd.read_csv('../../au_anual_import_commodity.csv')\n",
     "cols_to_drop = ['commodity', 'year', 'comm_code']\n",
